--- a/social.html
+++ b/social.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First website project</title>
+	<title>Social media</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" type="text/css" href="head&foot.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +14,8 @@
 
 	<nav>
 		<ul>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDI</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modelsgp.html"> MODLES GP</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
@@ -23,27 +23,19 @@
 	</nav>
 
 	<section>
-			
-			<div class="sidebar">
-					<h2><marquee> Developed by Barun Kuinkel</marquee></h2><br>
-					<div class="jpeg">
-						<img src="a.jpg" width="600px" height="400px">
-						<div class="info"> This picture was taken at Nagarkot</div>
-					</div>
-					<div class="jpeg" width="600px" height="400" >
-					<img src="a.jpg">
-					<div class="info"> This picture was taken at Nagarkot</div>
-					</div>
-				</div>
-				<div class="sidebar1">
-				<h2>Refrences for further study:</h2>
+		<div>
+			<fieldset>
+				<h2>Social Sites</h2>
 				<ul>
-					<li><a href="https://www.w3schools.com">W3 Schools</a></li>
-					<li><a href="https://css-tricks.com">CSS Tricks</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">Mozila Developers</a></li>
-					<li><a href="https://www.codecademy.com/catalog/subject/web-development">Code Academy</a></li>
-				</div>
+					<li><a href="https://www.facebook.com/barun.kuinkel">Facebook</a></li>
+					<li><a href="https://twitter.com/barun_kuinkel">Twitter</a></li>
+					<li><a href="https://www.instagram.com/barun_kuinkel">Instagram</a></li>
+					<li><a href="https://np.linkedin.com/in/barun-kuinkel-129721113">Linkedin</a></li>
+				</ul>
+			</fieldset>
+		</div>
 	</section>
+
 	<footer>
 		<div class="socialicons">
 			<h3> Follow On Social site</h3>
