--- a/social.html
+++ b/social.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Social media</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<link rel="stylesheet" type="text/css" href="head&foot.css">
+	<link rel="stylesheet" type="text/css" href="social.css">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -27,10 +27,10 @@
 			<fieldset>
 				<h2>Social Sites</h2>
 				<ul>
-					<li><a href="https://www.facebook.com/barun.kuinkel">Facebook</a></li>
-					<li><a href="https://twitter.com/barun_kuinkel">Twitter</a></li>
-					<li><a href="https://www.instagram.com/barun_kuinkel">Instagram</a></li>
-					<li><a href="https://np.linkedin.com/in/barun-kuinkel-129721113">Linkedin</a></li>
+					<li><a href="https://www.facebook.com/barun.kuinkel"><img src="fb.jpg"></a></li>
+					<li><a href="https://twitter.com/barun_kuinkel"><img src="twitter.jpg"></a></li>
+					<li><a href="https://www.instagram.com/barun_kuinkel"><img src="instagram.jpg"></a></li>
+					<li><a href="https://np.linkedin.com/in/barun-kuinkel-129721113"><img src="linkedin.jpg"></a></li>
 				</ul>
 			</fieldset>
 		</div>
