--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>First website project</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<link rel="stylesheet" type="text/css" href="head&foot.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -25,24 +24,16 @@
 	<section>
 			
 			<div class="sidebar">
-					<h2><marquee> Developed by Barun Kuinkel</marquee></h2><br>
+				<fieldset>
 					<div class="jpeg">
-						<img src="a.jpg" width="600px" height="400px">
-						<div class="info"> This picture was taken at Nagarkot</div>
-					</div>
-					<div class="jpeg" width="600px" height="400" >
-					<img src="a.jpg">
-					<div class="info"> This picture was taken at Nagarkot</div>
+						<img src="a.jpg" width="600px" height="400px">		
 					</div>
 				</div>
+			</fieldset>
+			
 				<div class="sidebar1">
-				<h2>Refrences for further study:</h2>
-				<ul>
-					<li><a href="https://www.w3schools.com">W3 Schools</a></li>
-					<li><a href="https://css-tricks.com">CSS Tricks</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">Mozila Developers</a></li>
-					<li><a href="https://www.codecademy.com/catalog/subject/web-development">Code Academy</a></li>
-				</div>
+					
+				
 	</section>
 	<footer>
 		<div class="socialicons">
