--- a/modlesgp.html
+++ b/modlesgp.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>modles_gp</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<link rel="stylesheet" type="text/css" href="head&foot.css">
+	<link rel="stylesheet" type="text/css" href="modlesgp.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -14,21 +13,109 @@
 
 	<nav>
 		<ul>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDI</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modlesgp.html"> MODLES GP</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
 		</ul>
 	</nav>
 
 	<section>
-		
+		<div>
+		<fieldset>
+		<h2>1. Introduction</h2><br>
+		<p>
+			The main aim of the project is to design an appropriate webpages. The main page that is index page is the landing page from where six different webpage is accessed. Each page containing the header and footer and some of the page contain the sidebar too. Hyper link is used to connect each page. All the pages contain the navigation bar from where user can smoothly jump into the page that the user desire. The theme of the project is to use maximum number of code to design user friendly and eye catchy webpage.	</p>
 
+			<p>
+				Targeting the visitors most of the people use smart phone. Almost 60 percent use the smart phone so the designed is most in priority for the mobile or the smart phones. All the design is media friendly and the eye friendly. Each web page looks good in mobile to personal computer. 
+			</p>
 
+			<p>
+				The main index.html page is the landing page for the user from where all the other page can be accessed. User cannot directly get accessed other page without opening index page but once the home page is opened the navigation on each page help to jump towards next page.
+			</p>
+			<p>
+				The about.html page is the second web page in the project which contain the description of the author that means mine information along with my experience as a developer. In this page the header, navigation and footer is as same as of index page.
+			</p>
+			<p>
+				The third page is the social media page which contain the hyper link that directly link to my social site such as Facebook, Twitter, Instagram and Linked in. Image is used for the area to link to social site.
+			</p>
+			<p>
+				The CV page contain the CV of the developer. In this page there is two division, one is for developer’s CV where as other is to create the CV of the user. To create the CV form is used. In this page the ad position is also available. This page also contain header, navigation and footer section.
+			</p>
+			<p>
+				The next page that is the fifth page is models GP page which contain the report of the project. This contain the experience, introduction, wireframe and mockup. This is totally used for the reporting.
+			</p>
+			<p>
+				The final or the last page is contact page which contain the form. If the user will to give comment then it is possible from this page as it contain form including name, email and the comment they wanted to comment.
+			</p><br><br>
+		</fieldset>
+		<fieldset>
+			<h2>2.	Analysis</h2><br>
+			<p>
+				Task that was given is to design the six web page having one landing page and should accessed other page from the landing page. Firstly analyzing the need and requirement, wireframe is designed and the coding is done. The wireframe are as below.
+			</p><br>
+			<ul>
+				<li><img src="index.JPG"></li>
+				<li><img src="about.JPG"></li>
+				<li><img src="social.JPG"></li>
+				<li><img src="cv.JPG"></li>
+				<li><img src="modles.JPG"></li>
+				<li><img src="contact.JPG"></li>
 
+			</ul>
+		</fieldset>
+		<fieldset>
+			<h2>3. Design</h2><br>
+			<p>
+				After analyzing the wire frame. Wireframe is now converted into design. The coding is done and the wireframe is converted to user friendly design. Each web page is designed targeting every size of device. The main focusing part is mobile or smaller device as more than 605 people use smart phone. Here are some of the screenshot of the web page.
+			</p><br>
+			<ul>
+				<li><img src="web-scr--home.png"></li>
+				<li><img src="web-scr--about.png"></li>
+				<li><img src="web-scr--social.png"></li>
+				<li><img src="web-scr--modles.png"></li>
+				<li><img src="web-scr--cv.png"></li>
+				<li><img src="web-scr--contact.png"></li>
 
-
+			</ul>
+		</fieldset>
+		<fieldset>
+			<h2>4.	Experience</h2><br>
+			<p>
+				Talking about my experience as web developer it was a bit difficult in the very beginning for me as the html and css was completely the new topic for me. Later on, with the help of tutor and self-study makes me capable of creating web page. Now I can create smooth and attractive design with media responsive by using various css properties. I can find that the css is in high priority for the developer to make an attractive design along with the media responsive. There are lots of properties I have learned during this first semester. It’s my great achievement. During the semester I had learned both html tags and css properties. Html gives the outline for the web page that means it contain all the information where as css is used to make the design more efficient, attractive, and smooth. All the content is mainly created under body tag where we can create navigation, different side bar, section, footer, etc. Almost most of the important content comes under it. But in the header also we can create navigation and break it into different blocks.
+			</p><br>
+		</fieldset>
+		<fieldset>
+			<h2>5. Validate</h2><br>
+			<p>
+				Each web pages are validated. Validation is done to check the originality and the proof needed is the screenshot which is available. Here are the screenshot of the website that are validated.
+			</p><br>
+			<ul>
+				<li><img src=".png"></li>
+				<li><img src=".png"></li>
+				<li><img src=".png"></li>
+				<li><img src=".png"></li>
+				<li><img src=".png"></li>
+				<li><img src=".png"></li>
+			</ul><br>
+				</fieldset>
+				<fieldset>
+			<h2>6.	Conclusion</h2><br>
+			<p>
+				So in my project there is six web pages which is accessed by the landing page named index.html. The landing page contain navigation which is linked to the other page by the use of hyperlink. Each page containing same header, navigation menu bar and footer. The footer section contain the three division containing different information’s such as address, copy right, contact detail, etc. talking about the about page it contain the description of the developer. It contain the detail information about mine and my experience as a web developer. The social media page contain my social links through which the user can easily and directly get connected with me in my various social site including Facebook, Instagram, Twitter and Linked in. The next page is the CV page which contain my CV and contain a separate form from where the user can create their CV through the website. The advertisement area is also declared in this page as the advertisement is the key source to earn money. The next page is the model gp which contain the reporting of the project. It include report, wireframe, mockup, validation proof and references as well. The final page is contact page which contain the form which is validate. The user can comment the website from this page. In this page the user can give their comment by providing name and email. Form is validated so it check whether the space is blank or not. If yes it alert and also check the sign like @, .com in email section and alert the user.
+			</p><br>
+		</fieldset>
+		<fieldset>
+			<h2>7. References</h2><br>
+			<ul>
+				<a href="https://www.w3schools.com">a. w3school</a>
+				<a href=""></a>
+			</ul>
+		</fieldset>
+	</div>
 	</section>
 	<footer>
 		<div class="socialicons">
