--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
 	<title>About Developer</title>
 	<link rel="stylesheet" type="text/css" href="about.css">
-	<link rel="stylesheet" type="text/css" href="head&foot.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -13,45 +12,42 @@
 	</header>
 
 	<nav>
+		<!-- navigation for the website -->
 		<ul>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDI</a></li>
+						<!-- list the navigation menu -->
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modelsgp.html"> MODLES GP</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modlesgp.html"> MODLES GP</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
 		</ul>
 	</nav>
 
 	<section>
-		
+		<!-- section started -->
 			<div class="sidebar">
+				<fieldset>
+					<!-- to make a field -->
 				<h2>Background</h2>
-				<p>I, Barun Kuinkel an active youth of age 17, completed my high school degree from the Kathmandu Unified City College in the faculty of management choosing Computer Science as the major subject, where I gained lots of knowledge and skills beyond the syllabus. I got helped from the teachers and the professor who shows the right path to reach the ultimate goal. I am also so passionate about social work for which I have been involved in various international and national organizations like Amnesty International, Junior Chamber International, Y-PEER International, budhanilkantha sports club, etc. I also been involved as volunteers in many events and programs. As I am peer educator and youth advocate in the field of Sexual Reproductive Health and Rights. I am coordinator at Amnesty International, RBH Youth Network and Secretary General at Kapan Junior Jaycees. Talking about myself I was also the voice of UNFPA and work for the project to develop mobile applications for Adolescent. I have taken lots of training related to team work, time management, leadership and interpersonal skills which is required for personal development. </p><br>
+				<p>I, Barun Kuinkel an active youth of age 18, completed my high school degree from the Kathmandu Unified City College in the faculty of management choosing Computer Science as the major subject, where I gained lots of knowledge and skills beyond the syllabus. I got helped from the teachers and the professor who shows the right path to reach the ultimate goal. I am also so passionate about social work for which I have been involved in various international and national organizations like Amnesty International, Junior Chamber International, Y-PEER International, budhanilkantha sports club, etc. I also been involved as volunteers in many events and programs. As I am peer educator and youth advocate in the field of Sexual Reproductive Health and Rights. I am coordinator at Amnesty International, RBH Youth Network and Secretary General at Kapan Junior Jaycees. Talking about myself I was also the voice of UNFPA and work for the project to develop mobile applications for Adolescent. I have taken lots of training related to team work, time management, leadership and interpersonal skills which is required for personal development. currently I am studying BSc (Hons) Computing at University of Northampton UK through NAMI college Kathmandu, Nepal.</p><br>
 
 				<h2>As a Developeer</h2>
 				<p> Talking about my experience as web developer it was a bit difficult in the very beginning for me as the html and css was completely the new topic for me. Later on, with the help of tutor and self-study makes me capable of creating web page. Now I can create smooth and attractive design by using various css properties. There are lots of properties I have learned during this first semester. It’s my great achievement. During the semester I had learned both html tags and css properties. Html gives the outline for the web page that means it contain all the information where as css is used to make the design more efficient, attractive, and smooth. All the content is mainly created under body tag where we can create navigation, different side bar, section, footer, etc. Almost most of the important content comes under it. But in the header also we can create navigation and break it into different blocks. </p>
 
-
-			</div>
-		
+			</fieldset>
 			
-				<div class="sidebar1">
-				<h2>Refrences for further study:</h2>
-				<ul>
-					<li><a href="https://www.w3schools.com/">W3 Schools</a></li>
-					<li><a href="https://css-tricks.com">CSS Tricks</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">Mozila Developers</a></li>
-					<li><a href="https://www.codecademy.com/catalog/subject/web-development">Code Academy</a></li>
-				</ul>
-				</div>
+			</div>
 			
 
 	</section>
 	<footer>
+		<!-- footer section started -->
 		<div class="socialicons">
 			<h3> Follow On Social site</h3>
 			<ul>
 				<li>
+					<!-- listing socal media -->
 					<a href="https://www.facebook.com/barun.kuinkel" target="_blank"><img src="fb.jpg"></a>
 					<a href="https://twitter.com/barun_kuinkel"><img src="twitter.jpg"></a>
 					<a href="https://www.instagram.com/barun_kuinkel"><img src="instagram.jpg"></a>
