--- a/contact.html
+++ b/contact.html
@@ -3,73 +3,81 @@
 <head>
 	<title>Contacts</title>
 	<link rel="stylesheet" type="text/css" href="about.css">
-	<link rel="stylesheet" type="text/css" href="head&foot.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
+		<!-- header tag -->
 			<h1>WELCOME TO MY PAGE </h1>
 				
 	</header>
-
+<!-- header is closed -->
 	<nav>
+		<!-- navigation for the website -->
 		<ul>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT US</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDI</a></li>
+			<!-- menubar list -->
+			<!-- hyper link is used -->
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modelsgp.html"> MODLES GP</a></li>
-			
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modlesgp.html"> MODLES GP</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
 		</ul>
 	</nav>
-
+<!-- nav closeed -->
 	<section>
-		<div class="pi">
-			<fieldset>
-			<h2>Personal Information</h2>
-			<fieldset>
-			<table style="width:100%">
-				<tr>
-					<td>Name</td> <td>:</td> <td>Barun Kuinkel</td>
-				</tr>
-				<tr>
-					<td>Contact</td> <td>:</td> <td>9860470553 / 9813371846</td>
-				</tr>
-
-				<tr>
-						<td>Address</td> <td>:</td> <td>Kapan, Nilopul, Kathmandu</td>
-				</tr>
-				<tr>
-					<td>Viber / Whats app / IMO</td> <td>:</td> <td>+977-9860470553</td>
-				</tr>
-				<tr>
-					<td>Facebook</td> <td>:</td> <td>www.facebook.com/barun.kuinkel</td>
-				</tr>
-				<tr>
-					<td>Instagram</td> <td>:</td> <td>www.instagram.com/barun_kuinkel</td>
-				</tr>
-				<tr>
-					<td>twitter</td> <td>:</td> <td>www.twitter.com/barun_kuinkel</td>
-				</tr>
-				<tr>
-					<td>linkedin</td> <td>:</td> <td>www.linkedin.com//in/barun-kuinkel-129721113</td>
-				</tr>
-
-		</table>
-	</fieldset>
+		<!-- section started -->
+		<script type="text/javascript"> 
+			 // java script to validate the form
+      function validate(form){
+         if(form.firstname.value==''){
+            alert('please enter the firstname');
+            // if the blank is kept it alert
+            form.firstname.focus();
+            return false;
+         }
+         if(form.lastname.value==''){
+            alert('please enter the surname');
+            // if the blank is kept it alert
+            form.lastname.focus();
+            return false;
+         }
+           if(form.email.value==''){
+            alert('please check the Email');
+            // if the blank is kept it alert
+            // check @, .com
+            form.email.focus();
+            return false;
+         }
+      }
+   </script>
+   <fieldset>
+   <h1> Enter Your Details</h1>
+   <form method="POST" action="" onsubmit="return validate(this)">
+   	<!-- form started -->
+   	First name:<br>
+   	<input type="text" name="firstname" placeholder="enter first name"><br><br>
+   	Last name:<br>
+   	<input type="text" name="lastname" placeholder="enter last name"><br><br>
+   	Email:<br>
+   	<input type="Email" name="email" placeholder=" example.example@example.com"><br><br>
+   	Comment:<br>
+   	<textarea name="comment" rows="20" cols="28"> Write how you feel.</textarea><br>
+   	<!-- text area needed for comment or large space to write -->
+   	<input type="submit" name="submit" value="submit">
+   </form>
 </fieldset>
-		</div>
-		<fieldset>
-		<div class="map"> <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3531.5191383268852!2d85.34795217940358!3d27.732129482865858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1523984266674" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></iframe>
-			
-		</fieldset>
-		</div>
+
 	</section>
+	<!-- section is closed -->
 	<footer>
+		<!-- footer starts -->
 		<div class="socialicons">
 			<h3> Follow On Social site</h3>
 			<ul>
 				<li>
+					<!-- list of the hyper link object  -->
 					<a href="https://www.facebook.com/barun.kuinkel" target="_blank"><img src="fb.jpg"></a>
 					<a href="https://twitter.com/barun_kuinkel"><img src="twitter.jpg"></a>
 					<a href="https://www.instagram.com/barun_kuinkel"><img src="instagram.jpg"></a>
