--- a/social.html
+++ b/social.html
@@ -11,27 +11,34 @@
 			<h1>WELCOME TO MY PAGE </h1>
 				
 	</header>
-
+<!-- navigation for the website -->
 	<nav>
 		<ul>
+			<!-- list the navigation menu -->
+
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modelsgp.html"> MODLES GP</a></li>
+			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modlesgp.html"> MODLES GP</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
 		</ul>
 	</nav>
 
 	<section>
+		<!-- section started -->
 		<div>
 			<fieldset>
 				<h2>Social Sites</h2>
+				<!-- list of the social site -->
 				<ul>
 					<li><a href="https://www.facebook.com/barun.kuinkel"><img src="fb.jpg"></a></li>
 					<li><a href="https://twitter.com/barun_kuinkel"><img src="twitter.jpg"></a></li>
 					<li><a href="https://www.instagram.com/barun_kuinkel"><img src="instagram.jpg"></a></li>
+					<!-- a is used for hyper link -->
 					<li><a href="https://np.linkedin.com/in/barun-kuinkel-129721113"><img src="linkedin.jpg"></a></li>
 				</ul>
+				<!-- list item is closed -->
 			</fieldset>
 		</div>
 	</section>
