--- a/modlesgp.html
+++ b/modlesgp.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 	<header>
+		<!-- header portion -->
 			<h1>WELCOME TO MY PAGE </h1>
 				
 	</header>
-
+<!-- header is closed -->
 	<nav>
+		<!-- navigation bar created -->
 		<ul>
+			<!-- listing item -->
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
+			<!-- for hypperlink -->
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
 			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
@@ -23,10 +27,14 @@
 	</nav>
 
 	<section>
+		<!-- main part section is start -->
 		<div>
+			<!-- create a divisionn -->
 		<fieldset>
+			<!-- create a field -->
 		<h2>1. Introduction</h2><br>
 		<p>
+			<!-- to make paragraph -->
 			The main aim of the project is to design an appropriate webpages. The main page that is index page is the landing page from where six different webpage is accessed. Each page containing the header and footer and some of the page contain the sidebar too. Hyper link is used to connect each page. All the pages contain the navigation bar from where user can smoothly jump into the page that the user desire. The theme of the project is to use maximum number of code to design user friendly and eye catchy webpage.	</p>
 
 			<p>
@@ -52,12 +60,15 @@
 				The final or the last page is contact page which contain the form. If the user will to give comment then it is possible from this page as it contain form including name, email and the comment they wanted to comment.
 			</p><br><br>
 		</fieldset>
+		<!-- field is closed -->
 		<fieldset>
+			<!-- new field started -->
 			<h2>2.	Analysis</h2><br>
 			<p>
 				Task that was given is to design the six web page having one landing page and should accessed other page from the landing page. Firstly analyzing the need and requirement, wireframe is designed and the coding is done. The wireframe are as below.
 			</p><br>
 			<ul>
+				<!-- listing image -->
 				<li><img src="index.JPG"></li>
 				<li><img src="about.JPG"></li>
 				<li><img src="social.JPG"></li>
@@ -72,13 +83,14 @@
 			<p>
 				After analyzing the wire frame. Wireframe is now converted into design. The coding is done and the wireframe is converted to user friendly design. Each web page is designed targeting every size of device. The main focusing part is mobile or smaller device as more than 605 people use smart phone. Here are some of the screenshot of the web page.
 			</p><br>
-			<ul>
+			<ul> 
+				<!-- listing images into my page -->
 				<li><img src="web-scr--home.png"></li>
 				<li><img src="web-scr--about.png"></li>
 				<li><img src="web-scr--social.png"></li>
-				<li><img src="web-scr--modles.png"></li>
+				<li><img src="web-scr--modle.png"></li>
 				<li><img src="web-scr--cv.png"></li>
-				<li><img src="web-scr--contact.png"></li>
+				<li><img src="web-scr--contact-1.png"></li>
 
 			</ul>
 		</fieldset>
@@ -94,12 +106,19 @@
 				Each web pages are validated. Validation is done to check the originality and the proof needed is the screenshot which is available. Here are the screenshot of the website that are validated.
 			</p><br>
 			<ul>
-				<li><img src=".png"></li>
-				<li><img src=".png"></li>
-				<li><img src=".png"></li>
-				<li><img src=".png"></li>
-				<li><img src=".png"></li>
-				<li><img src=".png"></li>
+				<!-- list the image in order -->
+				<li><img src="val-index.png"></li>
+				<li><img src="val-index1.png"></li>
+				<li><img src="val-about.png"></li>
+				<li><img src="val-about1.png"></li>
+				<li><img src="val-cv.png"></li>
+				<li><img src="val-cv1.png"></li>
+				<li><img src="val-contact.png"></li>
+				<li><img src="val-contact1.png"></li>
+				<li><img src="val-model.png"></li>
+				<li><img src="val-model1.png"></li>
+				<li><img src="val-social.png"></li>
+				<li><img src="val-social1.png"></li>
 			</ul><br>
 				</fieldset>
 				<fieldset>
@@ -109,19 +128,41 @@
 			</p><br>
 		</fieldset>
 		<fieldset>
-			<h2>7. References</h2><br>
+			<h2>7. link</h2>
 			<ul>
-				<a href="https://www.w3schools.com">a. w3school</a>
-				<a href=""></a>
+				<li>https://barun1.github.io/csy1018/</li>
+			</ul>
+		</fieldset>
+		<fieldset>
+			<h2>8. References</h2><br>
+			<ul>
+				<!-- refrencing is done in seperate column -->
+				<li>
+					Microsoft Virtual Academy. (2018). Microsoft Virtual Academy. [online] Available at: https://mva.microsoft.com/ [Accessed 5 Apr. 2018].
+				</li><br>
+				<li>
+					W3schools.com. (2018). W3Schools Online Web Tutorials. [online] Available at: https://www.w3schools.com/ [Accessed 29 Mar. 2018].
+				</li><br>
+				<li>
+					Google Developers. (2018). Google Developers. [online] Available at: https://developers.google.com/ [Accessed 5 Apr. 2018].
+				</li><br>
+				<li>
+					Developer.chrome.com. (2018). Extensions: maximize the Chrome browsing experience - Google Chrome. [online] Available at: https://developer.chrome.com [Accessed 6 Apr. 2018].
+				</li>
+
 			</ul>
 		</fieldset>
 	</div>
 	</section>
+	<!-- section is now closed -->
 	<footer>
+		<!-- footer started -->
 		<div class="socialicons">
+			<!-- division class socialicons starte -->
 			<h3> Follow On Social site</h3>
 			<ul>
 				<li>
+					<!-- listing hyperlylinked  -->
 					<a href="https://www.facebook.com/barun.kuinkel" target="_blank"><img src="fb.jpg"></a>
 					<a href="https://twitter.com/barun_kuinkel"><img src="twitter.jpg"></a>
 					<a href="https://www.instagram.com/barun_kuinkel"><img src="instagram.jpg"></a>
@@ -131,10 +172,12 @@
 
 		</div>
 		<div class="copyright">
+			<!-- second division -->
 			<p> Copyright © 2018 Barun. All Rights Reserved
 			</p>
 		</div>
 		<div class="location">
+			<!-- third division -->
 			Kapan Nilopul, Kathmandu, Nepal.<br>
 			Contact:9860470553 / 9813371846
 
