--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	<nav>
 		<ul>
 			<!-- list the navigation menu -->
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/index.html">HOME </a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/about.html">ABOUT ME</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/social.html">SOCIAL MEDIA</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/cv.html">CV</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/modlesgp.html"> MODLES GP</a></li>
-			<li><a href="file:///C:/Users/Dell/Desktop/web-pro/contact.html"> CONTACT</a></li>
+			<li><a href="https://barun1.github.io/csy1018/index.html">HOME </a></li>
+			<li><a href="https://barun1.github.io/csy1018/about.html">ABOUT ME</a></li>
+			<li><a href="https://barun1.github.io/csy1018/social.html">SOCIAL MEDIA</a></li>
+			<li><a href="https://barun1.github.io/csy1018/cv.html">CV</a></li>
+			<li><a href="https://barun1.github.io/csy1018/modlesgp.html"> MODLES GP</a></li>
+			<li><a href="https://barun1.github.io/csy1018/contact.html"> CONTACT</a></li>
 		</ul>
 	</nav>
 
